--- a/style.css
+++ b/style.css
@@ -1,26 +1,25 @@
 body {
   font-family: sans-serif;
+  line-height: 1;
+  margin: 1rem auto 0;
+  padding: 1rem;
+  max-width: 40rem;
+}
+p {
   line-height: 1.5;
-  margin: 2em auto;
-  max-width: 40em;
 }
 header {
   display: flex;
   align-items: center;
-  margin-left: -48px;
 }
 section {
-  margin: 2em 0;
-  padding: 1em;
-  border-radius: 1em;
-  box-shadow: 0 0 0.5em 0 rgba(0,0,0,.15);
+  margin: 2rem 0;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.5rem 0 rgba(0,0,0,.15);
   transition: box-shadow 0.2s ease;
 }
 section:hover {
-  box-shadow: 0 0 1em 0 rgba(0,0,0,.15);
-}
-aside {
-  
+  box-shadow: 0 0 1rem 0 rgba(0,0,0,.15);
 }
 h1,
 a,
@@ -29,35 +28,33 @@ a:visited {
   text-decoration: none;
 }
 h2 {
-  margin: 0 0 1em;
+  margin: 0;
+  padding: 1rem;
   color: #036;
 }
-img {
-  margin: 0 -1em;
-}
-.note {
-  padding: 0 1em;
-  background-color: #06c;
-  color: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: height 0.2s ease;
-  height: 0;
+.hero {
+  max-height: 12rem;
   overflow: hidden;
+  box-shadow: 0 -3rem 1rem -2rem white inset;
 }
-.button:hover ~ .note {
-  height: 1.5em;
+.hero img {
+  width: 100%;
+  position: relative;
+  z-index: -1;
+}
+section p {
+  margin: 0;
+  padding: 1rem;
 }
 .button {
   display: inline-block;
-  margin: 0 1em 0 0;
-  padding: 0.5em 1em;
-  border-radius: 0.5em;
+  position: relative;
+  margin: 0 1rem 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
   background-color: #06c;
-  color: white;
   border: #06c 2px solid;
+  color: white;
   text-decoration: none;
   transition: background-color 0.2s ease, color 0.2s ease;
 }
@@ -65,17 +62,55 @@ img {
   background-color: white;
   color: #06c;
 }
-span {
-  color: #06c;
-}
+code,
 kbd {
   font-family: sans-serif;
-  padding: 0 0.5em;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+}
+code {
+  background-color: #06c;
+  color: white;
+}
+kbd {
   background-color: #eee;
   color: #333;
-  border-radius: 0.5em;
 }
 footer {
-  margin-top: 2em;
   color: #666;
+}
+@media (min-width: 800px) {
+  header {
+    margin-left: -3rem;
+  }
+  .button:before {
+    content: '↑ Click & drag up to your Bookmarks Bar.';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 1rem;
+    background-color: #06c;
+    color: white;
+    text-align: center;
+    line-height: 1.5;
+    height: 0;
+    transition: height 0.2s ease;
+    overflow: hidden;
+  }
+  .button:hover:before {
+    height: 1.5em;
+  }
+  .button:after {
+    content: '← drag to your bookmarks';
+    position: absolute;
+    width: 12rem;
+    left: 2rem;
+    margin-left: 100%;
+    transition: left 0.2s ease;
+    color: #06c;
+  }
+  .button:hover:after {
+    left: 1rem;
+  }
 }
